--- a/papers/actor-based-large-neighborhood-search/tex/discussion.tex
+++ b/papers/actor-based-large-neighborhood-search/tex/discussion.tex
@@ -1,4 +1,4 @@
-section{Discussion}
+\section{Discussion}
 \label{sec:4-discussion}
 The maintenance scheduling process effectively solves a complex scheduling problem by
 relying in multiple actors. Through the use of actors the scheduling process handles
@@ -71,57 +71,26 @@ solutions, user inputs, and in the dynamic data source as they occur opposed to
 restarting the metaheuristics.
 
 \subsection{Future Research}
-% TODO 
-By structuring system state changes as atomic pointer swaps, one can modularize
-concurrency at each layer and ensure real-time synchronization across multiple
-optimization levels.
-
-% TODO 
-By structuring system state changes as atomic pointer swaps, one can modularize
-concurrency at each layer and ensure real-time synchronization across multiple
-optimization levels.
-
-% TODO 
-Designing lock-free non-message-passing frameworks that handle
-real-time atomic pointer updates across multiple actor layers. 
-
-% TODO 
-Exploring specialized hardware or runtime support for ultra-low-latency
-coordination.
-
-% TODO
-Roadmap. Provide a short bullet list of concrete next steps—for instance, “(1)
-building a robust pointer-swap concurrency library, (2) testing multi-level
-coordination on standard benchmarks, (3) validating performance in real-time
-scheduling applications.”
-
-% TODO 
-8. Future Research
-While this paper details our initial development of an actor-based large
-neighborhood search strategy, a range of exciting directions remain open. In
-particular, the lock-free coordination mechanisms used here—implemented via
-atomic pointer swaps—could be extended to n-level optimization problems where
-multiple decision layers must operate asynchronously. Future research will delve
-into both the theoretical aspects (e.g., convergence proofs for multi-level
-actor systems) and practical considerations (e.g., specialized data structures
-and memory-management schemes) to ensure real-time performance. Furthermore,
-exploring hybrid models that integrate machine learning heuristics or advanced
-decomposition methods can significantly broaden the applicability of our
-actor-based framework. We anticipate that these developments, coupled with
-extensive benchmarking on large-scale and time-critical scenarios, will provide
-a robust foundation for solving increasingly complex optimization tasks.
-
 \label{sec:discussion:future_research}
-The future research direction is is to demonstrate that
+A possible future research direction is to demonstrate that
 the actor-based approach described here can be used to model and optimize 
 multi-actor/multi-level scheduling processes. 
-Figure~\ref{fig:ordinator-hexagon:metaheuristics}
-shows a scheduling system architecture where each of the actors run an actor-based metaheuristic
+Figures~\ref{fig:ordinator-hexagon:persistence},
+~\ref{fig:ordinator-hexagon:atomicpointerswap},
+~\ref{fig:ordinator-hexagon:metaheuristics},
+~\ref{fig:ordinator-hexagon:orchestrator},
+~\ref{fig:ordinator-hexagon:userinterfaces}
+show a larger scale setup of the actor-based approach which is being developed with Total Energies.
+Here figure~\ref{fig:ordinator-hexagon:metaheuristics}
+shows the metaheuristics of scheduling system architecture where each of the actors run an AbLNS
 and that each metaheuristic will share its solutions with the other
-metaheuristics through atomic pointer swapping. Communicate with the end-user
-through message passing, integrate with a persistent storage through mutex
-locks, and the lifecycle of each of the metaheuristics will be controlled by
-the orchestrator also through message passing. 
+metaheuristics through atomic pointer swapping shown in figure~\ref{fig:ordinator-hexagon:atomicpointerswap}.
+Communicate with the end-user
+through userinterfaces and message passing as shown in figure~\ref{fig:ordinator-hexagon:userinterfaces}, 
+integrate with a persistent storage through mutex
+locks as shown in figure~\ref{fig:ordinator-hexagon:persistence}, 
+and the lifecycle of each of the metaheuristics will be controlled by
+the orchestrator also through message passing as shown in figure~\ref{fig:ordinator-hexagon:orchestrator}. 
 
 % \begin{figure}[H]
 % 	\centering
@@ -132,7 +101,9 @@ the orchestrator also through message passing.
 \begin{figure}[H]
 	\centering
 	\input{../../figures/model-setup-hexagon.tex}
-	\drawModelSetupHexagon[persistence=true]
+	\resizebox{0.7\textwidth}{!}{
+		\drawModelSetupHexagon[persistence=true]
+	}
 	\caption{
 		Overview of the scheduling process when modelled as actors. When LNS is encapsulated 
 		is an actor it becomes possible to optimize parts of a large process individually instead of 
@@ -143,7 +114,9 @@ the orchestrator also through message passing.
 \begin{figure}[H]
 	\centering
 	\input{../../figures/model-setup-hexagon.tex}
-	\drawModelSetupHexagon[atomicpointerswap=true]
+	\resizebox{0.7\textwidth}{!}{
+		\drawModelSetupHexagon[atomicpointerswap=true]
+	}
 	\caption{
 		Overview of the scheduling process when modelled as actors. When LNS is encapsulated 
 		is an actor it becomes possible to optimize parts of a large process individually instead of 
@@ -155,7 +128,9 @@ the orchestrator also through message passing.
 \begin{figure}[H]
 	\centering
 	\input{../../figures/model-setup-hexagon.tex}
-	\drawModelSetupHexagon[metaheuristics=true]
+	\resizebox{0.7\textwidth}{!}{
+		\drawModelSetupHexagon[metaheuristics=true]
+	}
 	\caption{
 		Overview of the scheduling process when modelled as actors. When LNS is encapsulated 
 		is an actor it becomes possible to optimize parts of a large process individually instead of 
@@ -167,7 +142,9 @@ the orchestrator also through message passing.
 \begin{figure}[H]
 	\centering
 	\input{../../figures/model-setup-hexagon.tex}
-	\drawModelSetupHexagon[orchestrator=true]
+	\resizebox{0.7\textwidth}{!}{
+		\drawModelSetupHexagon[orchestrator=true]
+	}
 	\caption{
 		Overview of the scheduling process when modelled as actors. When LNS is encapsulated 
 		is an actor it becomes possible to optimize parts of a large process individually instead of 
@@ -178,7 +155,9 @@ the orchestrator also through message passing.
 \begin{figure}[H]
 	\centering
 	\input{../../figures/model-setup-hexagon.tex}
-	\drawModelSetupHexagon[userinterface=true]
+	\resizebox{0.7\textwidth}{!}{
+		\drawModelSetupHexagon[userinterface=true]
+	}
 	\caption{
 		Overview of the scheduling process when modelled as actors. When LNS is encapsulated 
 		is an actor it becomes possible to optimize parts of a large process individually instead of 
@@ -187,8 +166,10 @@ the orchestrator also through message passing.
 	\label{fig:ordinator-hexagon:userinterfaces}
 \end{figure}
 
-The next step in this research direction will be to model the remaining stakeholders as their own 
-AbLNS metaheuristics, and then make them communicate together. Each exposing solutions to each 
+The next step in this direction will be to model the remaining stakeholders as their own 
+AbLNS metaheuristics, and then make them communicate together through atomic pointer swaps and message
+passing. This enables modular concurrency at each layer and ensures real-time
+synchronization across multiple optimization levels. Making each metaheuristic expose solutions to each 
 other in real-time providing each other with high quality parameters.
 
 \section{Conclusion}
